# Junior_Training_Sheet

./: .gitignore  CMakeLists.txt  README.MD
Sheet_A/: Aggressive_cows.cpp  Alyona_and_Numbers.cpp  Anton_and_Polyhedrons.cpp  Arpas_hard_exam_and_Mehrdads_naive_cheat.cpp  Balanced_Rating_Changes.cpp  BattleShip.cpp  Black_and_white_painting.cpp  BowWow_and_the_Timetable.cpp  Brains_Photos.cpp  Burning_Midnight_Oil.cpp  Calculating_Function.cpp  Chewbacca_and_Number.cpp  Counterexample.cpp  Dice_Tower.cpp  Dubstep.cpp  EASYMATH.cpp  Electricity.cpp  Even_Odds.cpp  Fancy_Fence.cpp  Football.cpp  Forming_Teams.cpp  Fourth_Point.cpp  Good_Number.cpp  Help_Vasilisa_the_Wise_2.cpp  Hierarchy.cpp  IQ_Test.cpp  I_Wanna_Be_the_Guy.cpp  Is_it_rated.cpp  Keyboard.cpp  Ksenia_and_Pan_Scales.cpp  Launch_of_Collider.cpp  Light_more_light.cpp  Lineland_Mail.cpp  Marcus_2.cpp  Mountain_Scenery.cpp  Oath_of_the_Nights_Watch.cpp  Olesya_and_Rodion.cpp  Ordering_Tasks.cpp  Overlapping_Rectangles.cpp  Pangram.cpp  (+19 more)
Sheet_B/: Balanced_Tunnel.cpp  Barcode.cpp  Fence.cpp  Hamming_Distance_Sum.cpp  Kefa_and_Company.cpp  Kuriyama_Mirais_Stones.cpp  Little_Gir_and_Game.cpp  Minimum_Ternary_String.cpp  PaintingEggs.cpp  Relatively_Prime_Pairs.cpp  Tavas_and_SaDDas .cpp  Taxi.cpp  Vacations.cpp  Vanya_and_Lanterns.cpp  Vasya_and_Cornfield.cpp  Wet_Shark_and_Bishops.cpp  Woodcutters.cpp
