cmake_minimum_required(VERSION 3.22)
project(Junior_Training_Sheet)

set(CMAKE_CXX_STANDARD 14)

add_executable(Hierarchy Sheet_A/Hierarchy.cpp)
add_executable(Ordering_Tasks Sheet_A/Ordering_Tasks.cpp)
add_executable(Team_Forming Sheet_A/Team_Forming.cpp)
add_executable(Alyona_and_Numbers Sheet_A/Alyona_and_Numbers.cpp)
add_executable(Anton_and_Polyhedrons Sheet_A/Anton_and_Polyhedrons.cpp)
add_executable(Arpas_hard_exam_and_Mehrdads_naive_cheat Sheet_A/Arpas_hard_exam_and_Mehrdads_naive_cheat.cpp)
add_executable(Balanced_Rating_Changes Sheet_A/Balanced_Rating_Changes.cpp)
add_executable(BattleShip Sheet_A/BattleShip.cpp)
add_executable(Black_and_white_painting Sheet_A/Black_and_white_painting.cpp)
add_executable(Brains_Photos Sheet_A/Brains_Photos.cpp)
add_executable(Calculating_Function Sheet_A/Calculating_Function.cpp)
add_executable(Chewbacca_and_Number Sheet_A/Chewbacca_and_Number.cpp)
add_executable(Counterexample Sheet_A/Counterexample.cpp)
add_executable(Dubstep Sheet_A/Dubstep.cpp)
add_executable(Even_Odds Sheet_A/Even_Odds.cpp)
add_executable(Football Sheet_A/Football.cpp)
add_executable(Good_Number Sheet_A/Good_Number.cpp)
add_executable(Help_Vasilisa_the_Wise_2 Sheet_A/Help_Vasilisa_the_Wise_2.cpp)
add_executable(I_Wanna_Be_the_Guy Sheet_A/I_Wanna_Be_the_Guy.cpp)
add_executable(IQ_Test Sheet_A/IQ_Test.cpp)
add_executable(Ksenia_and_Pan_Scales Sheet_A/Ksenia_and_Pan_Scales.cpp)
add_executable(Launch_of_Collider Sheet_A/Launch_of_Collider.cpp)
add_executable(Light_more_light Sheet_A/Light_more_light.cpp)
add_executable(Lineland_Mail Sheet_A/Lineland_Mail.cpp)
add_executable(Marcus_2 Sheet_A/Marcus_2.cpp)
add_executable(Olesya_and_Rodion Sheet_A/Olesya_and_Rodion.cpp)
add_executable(Mountain_Scenery Sheet_A/Mountain_Scenery.cpp)
add_executable(The_Seasonal_War Sheet_A/The_Seasonal_War.cpp)
add_executable(The_Seasonal_War_2 Sheet_A/The_Seasonal_War_2.cpp)
add_executable(Twins Sheet_A/Twins.cpp)
add_executable(Forming_Teams Sheet_A/Forming_Teams.cpp)
add_executable(Keyboard Sheet_A/Keyboard.cpp)
add_executable(Is_it_rated Sheet_A/Is_it_rated.cpp)
add_executable(Pangram Sheet_A/Pangram.cpp)
add_executable(Product Sheet_A/Product.cpp)
add_executable(Product_2nd Sheet_A/Product_2nd.cpp)
add_executable(Theatre_Square Sheet_A/Theatre_Square.cpp)
add_executable(Uniform_Generator Sheet_A/Uniform_Generator.cpp)
add_executable(Yaroslav_and_Permutations Sheet_A/Yaroslav_and_Permutations.cpp)
add_executable(Valera_and_X Sheet_A/Valera_and_X.cpp)
add_executable(EASYMATH Sheet_A/EASYMATH.cpp)
add_executable(Electricity Sheet_A/Electricity.cpp)
add_executable(BowWow_and_the_Timetable Sheet_A/BowWow_and_the_Timetable.cpp)
add_executable(Panoramixs_Prediction Sheet_A/Panoramixs_Prediction.cpp)
add_executable(Raising_Bacteria Sheet_A/Raising_Bacteria.cpp)
add_executable(Snow_Footprints Sheet_A/Snow_Footprints.cpp)
add_executable(Oath_of_the_Nights_Watch Sheet_A/Oath_of_the_Nights_Watch.cpp)
add_executable(Wasted_Time Sheet_A/Wasted_Time.cpp)
add_executable(Fancy_Fence Sheet_A/Fancy_Fence.cpp)
add_executable(Pouring_Rain Sheet_A/Pouring_Rain.cpp)
add_executable(Dice_Tower Sheet_A/Dice_Tower.cpp)
add_executable(Points_in_Figures_Rectangles Sheet_A/Points_in_Figures_Rectangles.cpp)
add_executable(Overlapping_Rectangles Sheet_A/Overlapping_Rectangles.cpp)
add_executable(Fourth_Point Sheet_A/Fourth_Point.cpp)
add_executable(The_Playboy_Chimp Sheet_A/The_Playboy_Chimp.cpp)
add_executable(Pipeline Sheet_A/Pipeline.cpp)
add_executable(Burning_Midnight_Oil Sheet_A/Burning_Midnight_Oil.cpp)
add_executable(Aggressive_cows Sheet_A/Aggressive_cows.cpp)